# cornucopia.owasp.org/svelte.config.js
@@ -248,6 +248,7 @@ export default {
 				'/api/lang/mobileapp/1.1',
 				'/api/lang/webapp/2.2',
 				'/api/lang/webapp/3.0',
+				'/api/lang/dbd',
 				'/api/cre/webapp/en',
 				'/api/cre/webapp/it',
 				'/api/cre/webapp/nl',
@@ -258,6 +259,7 @@ export default {
 				'/api/cre/webapp/pt_br',
 				'/api/cre/webapp/no_nb',
 				'/api/cre/mobileapp/en',
+				'/api/cre/dbd/en',
 				'/edition/mobileapp/PC2/1.1/en',
 				'/edition/webapp/VE2/2.2/es',
 				'/edition/webapp/VE2/2.2/it',
